--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 
   <title>PilipinoFlix</title>
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+
+
+  <link rel="shorcut icon" type="x-icon" href="">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   
